parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMENTARIO
    COMENTARIO_MULTILINEA

Grammar

Rule 0     S' -> init
Rule 1     init -> program
Rule 2     init -> <empty>
Rule 3     program -> main
Rule 4     program -> declars main
Rule 5     declars -> declars declar
Rule 6     declars -> declar
Rule 7     declar -> primitive_type function
Rule 8     declar -> VOID function
Rule 9     declar -> declaration PUNTO_COMA
Rule 10    declar -> assignation PUNTO_COMA
Rule 11    declar -> struct
Rule 12    main -> INT MAIN new_label PAR_IZQ PAR_DER function_block
Rule 13    new_label -> <empty>
Rule 14    function -> ID new_label param add_function function_block
Rule 15    add_function -> <empty>
Rule 16    param -> PAR_IZQ PAR_DER
Rule 17    param -> PAR_IZQ parameter_list PAR_DER
Rule 18    parameter_list -> parameter_list COMA parameter
Rule 19    parameter_list -> parameter
Rule 20    parameter -> primitive_type ID
Rule 21    primitive_type -> INT
Rule 22    primitive_type -> DOUBLE
Rule 23    primitive_type -> CHAR
Rule 24    primitive_type -> STRUCT ID
Rule 25    struct -> STRUCT ID struct_block PUNTO_COMA
Rule 26    struct_block -> BRA_IZQ new_scope declarations BRA_DER
Rule 27    function_block -> BRA_IZQ new_scope instructions BRA_DER
Rule 28    new_scope -> <empty>
Rule 29    function_block -> BRA_IZQ BRA_DER
Rule 30    instructions -> instructions instruction
Rule 31    instructions -> instruction
Rule 32    instruction -> declaration PUNTO_COMA
Rule 33    instruction -> assignation PUNTO_COMA
Rule 34    instruction -> for
Rule 35    instruction -> while
Rule 36    instruction -> do PUNTO_COMA
Rule 37    instruction -> if
Rule 38    instruction -> switch
Rule 39    instruction -> label
Rule 40    instruction -> goto PUNTO_COMA
Rule 41    instruction -> break PUNTO_COMA
Rule 42    instruction -> continue PUNTO_COMA
Rule 43    instruction -> return PUNTO_COMA
Rule 44    instruction -> expression PUNTO_COMA
Rule 45    instruction -> PUNTO_COMA
Rule 46    declarations -> declarations declaration PUNTO_COMA
Rule 47    declarations -> declaration PUNTO_COMA
Rule 48    declaration -> primitive_type declaration_list
Rule 49    declaration -> ID declaration_list
Rule 50    declaration_list -> declaration_list COMA ID IGUAL expression
Rule 51    declaration_list -> declaration_list COMA ID brackets IGUAL BRA_IZQ expression_list BRA_DER
Rule 52    declaration_list -> declaration_list COMA ID
Rule 53    declaration_list -> declaration_list COMA ID brackets
Rule 54    declaration_list -> declaration_list COMA ID COR_IZQ COR_DER IGUAL CADENA
Rule 55    declaration_list -> ID IGUAL expression
Rule 56    declaration_list -> ID brackets IGUAL BRA_IZQ expression_list BRA_DER
Rule 57    declaration_list -> ID
Rule 58    declaration_list -> ID brackets
Rule 59    declaration_list -> ID COR_IZQ COR_DER IGUAL CADENA
Rule 60    identifier -> ID
Rule 61    identifier -> ID bracket
Rule 62    brackets -> bracket
Rule 63    brackets -> COR_IZQ COR_DER
Rule 64    bracket -> bracket COR_IZQ expression COR_DER
Rule 65    bracket -> COR_IZQ expression COR_DER
Rule 66    assignation -> identifier equals expression
Rule 67    assignation -> identifier PUNTO ID equals expression
Rule 68    equals -> IGUAL
Rule 69    equals -> SUMA_IGUAL
Rule 70    equals -> RESTA_IGUAL
Rule 71    equals -> MULT_IGUAL
Rule 72    equals -> DIV_IGUAL
Rule 73    equals -> MOD_IGUAL
Rule 74    equals -> SHIFT_IZQ_IGUAL
Rule 75    equals -> SHIFT_DER_IGUAL
Rule 76    equals -> AND_BIT_IGUAL
Rule 77    equals -> XOR_BIT_IGUAL
Rule 78    equals -> OR_BIT_IGUAL
Rule 79    if -> IF PAR_IZQ expression PAR_DER if_marcker function_block add_if_label
Rule 80    add_if_label -> <empty>
Rule 81    if_marcker -> <empty>
Rule 82    if -> IF PAR_IZQ expression PAR_DER if_marcker function_block add_if_label ELSE else_marcker if
Rule 83    else_marcker -> <empty>
Rule 84    if -> IF PAR_IZQ expression PAR_DER if_marcker function_block add_if_label ELSE else_marcker function_block
Rule 85    while -> WHILE label_add PAR_IZQ expression PAR_DER while_add function_block
Rule 86    while_add -> <empty>
Rule 87    label_add -> <empty>
Rule 88    do -> DO label_add function_block WHILE PAR_IZQ expression PAR_DER
Rule 89    for -> FOR PAR_IZQ for_declaration PUNTO_COMA label_add expression PUNTO_COMA step_marcker step PAR_DER do_marcker function_block
Rule 90    do_marcker -> <empty>
Rule 91    step_marcker -> <empty>
Rule 92    for_declaration -> declaration
Rule 93    for_declaration -> assignation
Rule 94    step -> assignation
Rule 95    step -> increase
Rule 96    step -> decrease
Rule 97    switch -> SWITCH PAR_IZQ expression PAR_DER BRA_IZQ cases BRA_DER
Rule 98    cases -> cases case
Rule 99    cases -> cases default
Rule 100   cases -> case
Rule 101   case -> CASE expression DOS_PUNTOS instructions
Rule 102   default -> DEFAULT DOS_PUNTOS instructions
Rule 103   label -> ID DOS_PUNTOS
Rule 104   goto -> GOTO ID
Rule 105   break -> BREAK
Rule 106   continue -> CONTINUE
Rule 107   return -> RETURN expression
Rule 108   return -> RETURN
Rule 109   function_call -> ID param_val
Rule 110   param_val -> PAR_IZQ PAR_DER
Rule 111   param_val -> PAR_IZQ expression_list PAR_DER
Rule 112   expression_list -> expression_list COMA expression
Rule 113   expression_list -> expression
Rule 114   expression -> expression SUMA expression
Rule 115   expression -> expression RESTA expression
Rule 116   expression -> expression MULT expression
Rule 117   expression -> expression DIV expression
Rule 118   expression -> expression MOD expression
Rule 119   expression -> expression AND expression
Rule 120   expression -> expression OR expression
Rule 121   expression -> expression ES_IGUAL expression
Rule 122   expression -> expression NO_IGUAL expression
Rule 123   expression -> expression MENOR_IGUAL expression
Rule 124   expression -> expression MAYOR_IGUAL expression
Rule 125   expression -> expression MENOR expression
Rule 126   expression -> expression MAYOR expression
Rule 127   expression -> expression AND_BIT expression
Rule 128   expression -> expression OR_BIT expression
Rule 129   expression -> expression XOR_BIT expression
Rule 130   expression -> expression SHIFT_IZQ expression
Rule 131   expression -> expression SHIFT_DER expression
Rule 132   expression -> RESTA expression
Rule 133   expression -> AND_BIT expression
Rule 134   expression -> NOT expression
Rule 135   expression -> NOT_BIT expression
Rule 136   expression -> PAR_IZQ expression PAR_DER
Rule 137   expression -> expression INTERROGACION expression DOS_PUNTOS expression
Rule 138   expression -> increase
Rule 139   expression -> decrease
Rule 140   expression -> ENTERO
Rule 141   expression -> DECIMAL
Rule 142   expression -> CARACTER
Rule 143   expression -> CADENA
Rule 144   expression -> function_call
Rule 145   expression -> conversion
Rule 146   expression -> identifier
Rule 147   expression -> identifier PUNTO ID
Rule 148   conversion -> PAR_IZQ INT PAR_DER expression
Rule 149   conversion -> PAR_IZQ DOUBLE PAR_DER expression
Rule 150   conversion -> PAR_IZQ CHAR PAR_DER expression
Rule 151   increase -> SUMA_SUMA expression
Rule 152   increase -> expression SUMA_SUMA
Rule 153   decrease -> RESTA_RESTA expression
Rule 154   decrease -> expression RESTA_RESTA

Terminals, with rules where they appear

AND                  : 119
AND_BIT              : 127 133
AND_BIT_IGUAL        : 76
BRA_DER              : 26 27 29 51 56 97
BRA_IZQ              : 26 27 29 51 56 97
BREAK                : 105
CADENA               : 54 59 143
CARACTER             : 142
CASE                 : 101
CHAR                 : 23 150
COMA                 : 18 50 51 52 53 54 112
COMENTARIO           : 
COMENTARIO_MULTILINEA : 
CONTINUE             : 106
COR_DER              : 54 59 63 64 65
COR_IZQ              : 54 59 63 64 65
DECIMAL              : 141
DEFAULT              : 102
DIV                  : 117
DIV_IGUAL            : 72
DO                   : 88
DOS_PUNTOS           : 101 102 103 137
DOUBLE               : 22 149
ELSE                 : 82 84
ENTERO               : 140
ES_IGUAL             : 121
FOR                  : 89
GOTO                 : 104
ID                   : 14 20 24 25 49 50 51 52 53 54 55 56 57 58 59 60 61 67 103 104 109 147
IF                   : 79 82 84
IGUAL                : 50 51 54 55 56 59 68
INT                  : 12 21 148
INTERROGACION        : 137
MAIN                 : 12
MAYOR                : 126
MAYOR_IGUAL          : 124
MENOR                : 125
MENOR_IGUAL          : 123
MOD                  : 118
MOD_IGUAL            : 73
MULT                 : 116
MULT_IGUAL           : 71
NOT                  : 134
NOT_BIT              : 135
NO_IGUAL             : 122
OR                   : 120
OR_BIT               : 128
OR_BIT_IGUAL         : 78
PAR_DER              : 12 16 17 79 82 84 85 88 89 97 110 111 136 148 149 150
PAR_IZQ              : 12 16 17 79 82 84 85 88 89 97 110 111 136 148 149 150
PUNTO                : 67 147
PUNTO_COMA           : 9 10 25 32 33 36 40 41 42 43 44 45 46 47 89 89
RESTA                : 115 132
RESTA_IGUAL          : 70
RESTA_RESTA          : 153 154
RETURN               : 107 108
SHIFT_DER            : 131
SHIFT_DER_IGUAL      : 75
SHIFT_IZQ            : 130
SHIFT_IZQ_IGUAL      : 74
STRUCT               : 24 25
SUMA                 : 114
SUMA_IGUAL           : 69
SUMA_SUMA            : 151 152
SWITCH               : 97
VOID                 : 8
WHILE                : 85 88
XOR_BIT              : 129
XOR_BIT_IGUAL        : 77
error                : 

Nonterminals, with rules where they appear

add_function         : 14
add_if_label         : 79 82 84
assignation          : 10 33 93 94
bracket              : 61 62 64
brackets             : 51 53 56 58
break                : 41
case                 : 98 100
cases                : 97 98 99
continue             : 42
conversion           : 145
declar               : 5 6
declaration          : 9 32 46 47 92
declaration_list     : 48 49 50 51 52 53 54
declarations         : 26 46
declars              : 4 5
decrease             : 96 139
default              : 99
do                   : 36
do_marcker           : 89
else_marcker         : 82 84
equals               : 66 67
expression           : 44 50 55 64 65 66 67 79 82 84 85 88 89 97 101 107 112 113 114 114 115 115 116 116 117 117 118 118 119 119 120 120 121 121 122 122 123 123 124 124 125 125 126 126 127 127 128 128 129 129 130 130 131 131 132 133 134 135 136 137 137 137 148 149 150 151 152 153 154
expression_list      : 51 56 111 112
for                  : 34
for_declaration      : 89
function             : 7 8
function_block       : 12 14 79 82 84 84 85 88 89
function_call        : 144
goto                 : 40
identifier           : 66 67 146 147
if                   : 37 82
if_marcker           : 79 82 84
increase             : 95 138
init                 : 0
instruction          : 30 31
instructions         : 27 30 101 102
label                : 39
label_add            : 85 88 89
main                 : 3 4
new_label            : 12 14
new_scope            : 26 27
param                : 14
param_val            : 109
parameter            : 18 19
parameter_list       : 17 18
primitive_type       : 7 20 48
program              : 1
return               : 43
step                 : 89
step_marcker         : 89
struct               : 11
struct_block         : 25
switch               : 38
while                : 35
while_add            : 85

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . program
    (2) init -> .
    (3) program -> . main
    (4) program -> . declars main
    (12) main -> . INT MAIN new_label PAR_IZQ PAR_DER function_block
    (5) declars -> . declars declar
    (6) declars -> . declar
    (7) declar -> . primitive_type function
    (8) declar -> . VOID function
    (9) declar -> . declaration PUNTO_COMA
    (10) declar -> . assignation PUNTO_COMA
    (11) declar -> . struct
    (21) primitive_type -> . INT
    (22) primitive_type -> . DOUBLE
    (23) primitive_type -> . CHAR
    (24) primitive_type -> . STRUCT ID
    (48) declaration -> . primitive_type declaration_list
    (49) declaration -> . ID declaration_list
    (66) assignation -> . identifier equals expression
    (67) assignation -> . identifier PUNTO ID equals expression
    (25) struct -> . STRUCT ID struct_block PUNTO_COMA
    (60) identifier -> . ID
    (61) identifier -> . ID bracket

    $end            reduce using rule 2 (init -> .)
    INT             shift and go to state 5
    VOID            shift and go to state 8
    DOUBLE          shift and go to state 12
    CHAR            shift and go to state 13
    STRUCT          shift and go to state 14
    ID              shift and go to state 15

    init                           shift and go to state 1
    program                        shift and go to state 2
    main                           shift and go to state 3
    declars                        shift and go to state 4
    declar                         shift and go to state 6
    primitive_type                 shift and go to state 7
    declaration                    shift and go to state 9
    assignation                    shift and go to state 10
    struct                         shift and go to state 11
    identifier                     shift and go to state 16

state 1

    (0) S' -> init .



state 2

    (1) init -> program .

    $end            reduce using rule 1 (init -> program .)


state 3

    (3) program -> main .

    $end            reduce using rule 3 (program -> main .)


state 4

    (4) program -> declars . main
    (5) declars -> declars . declar
    (12) main -> . INT MAIN new_label PAR_IZQ PAR_DER function_block
    (7) declar -> . primitive_type function
    (8) declar -> . VOID function
    (9) declar -> . declaration PUNTO_COMA
    (10) declar -> . assignation PUNTO_COMA
    (11) declar -> . struct
    (21) primitive_type -> . INT
    (22) primitive_type -> . DOUBLE
    (23) primitive_type -> . CHAR
    (24) primitive_type -> . STRUCT ID
    (48) declaration -> . primitive_type declaration_list
    (49) declaration -> . ID declaration_list
    (66) assignation -> . identifier equals expression
    (67) assignation -> . identifier PUNTO ID equals expression
    (25) struct -> . STRUCT ID struct_block PUNTO_COMA
    (60) identifier -> . ID
    (61) identifier -> . ID bracket

    INT             shift and go to state 5
    VOID            shift and go to state 8
    DOUBLE          shift and go to state 12
    CHAR            shift and go to state 13
    STRUCT          shift and go to state 14
    ID              shift and go to state 15

    main                           shift and go to state 17
    declar                         shift and go to state 18
    primitive_type                 shift and go to state 7
    declaration                    shift and go to state 9
    assignation                    shift and go to state 10
    struct                         shift and go to state 11
    identifier                     shift and go to state 16

state 5

    (12) main -> INT . MAIN new_label PAR_IZQ PAR_DER function_block
    (21) primitive_type -> INT .

    MAIN            shift and go to state 19
    ID              reduce using rule 21 (primitive_type -> INT .)


state 6

    (6) declars -> declar .

    INT             reduce using rule 6 (declars -> declar .)
    VOID            reduce using rule 6 (declars -> declar .)
    DOUBLE          reduce using rule 6 (declars -> declar .)
    CHAR            reduce using rule 6 (declars -> declar .)
    STRUCT          reduce using rule 6 (declars -> declar .)
    ID              reduce using rule 6 (declars -> declar .)


state 7

    (7) declar -> primitive_type . function
    (48) declaration -> primitive_type . declaration_list
    (14) function -> . ID new_label param add_function function_block
    (50) declaration_list -> . declaration_list COMA ID IGUAL expression
    (51) declaration_list -> . declaration_list COMA ID brackets IGUAL BRA_IZQ expression_list BRA_DER
    (52) declaration_list -> . declaration_list COMA ID
    (53) declaration_list -> . declaration_list COMA ID brackets
    (54) declaration_list -> . declaration_list COMA ID COR_IZQ COR_DER IGUAL CADENA
    (55) declaration_list -> . ID IGUAL expression
    (56) declaration_list -> . ID brackets IGUAL BRA_IZQ expression_list BRA_DER
    (57) declaration_list -> . ID
    (58) declaration_list -> . ID brackets
    (59) declaration_list -> . ID COR_IZQ COR_DER IGUAL CADENA

    ID              shift and go to state 22

    function                       shift and go to state 20
    declaration_list               shift and go to state 21

state 8

    (8) declar -> VOID . function
    (14) function -> . ID new_label param add_function function_block

    ID              shift and go to state 24

    function                       shift and go to state 23

state 9

    (9) declar -> declaration . PUNTO_COMA

    PUNTO_COMA      shift and go to state 25


state 10

    (10) declar -> assignation . PUNTO_COMA

    PUNTO_COMA      shift and go to state 26


state 11

    (11) declar -> struct .

    INT             reduce using rule 11 (declar -> struct .)
    VOID            reduce using rule 11 (declar -> struct .)
    DOUBLE          reduce using rule 11 (declar -> struct .)
    CHAR            reduce using rule 11 (declar -> struct .)
    STRUCT          reduce using rule 11 (declar -> struct .)
    ID              reduce using rule 11 (declar -> struct .)


state 12

    (22) primitive_type -> DOUBLE .

    ID              reduce using rule 22 (primitive_type -> DOUBLE .)


state 13

    (23) primitive_type -> CHAR .

    ID              reduce using rule 23 (primitive_type -> CHAR .)


state 14

    (24) primitive_type -> STRUCT . ID
    (25) struct -> STRUCT . ID struct_block PUNTO_COMA

    ID              shift and go to state 27


state 15

    (49) declaration -> ID . declaration_list
    (60) identifier -> ID .
    (61) identifier -> ID . bracket
    (50) declaration_list -> . declaration_list COMA ID IGUAL expression
    (51) declaration_list -> . declaration_list COMA ID brackets IGUAL BRA_IZQ expression_list BRA_DER
    (52) declaration_list -> . declaration_list COMA ID
    (53) declaration_list -> . declaration_list COMA ID brackets
    (54) declaration_list -> . declaration_list COMA ID COR_IZQ COR_DER IGUAL CADENA
    (55) declaration_list -> . ID IGUAL expression
    (56) declaration_list -> . ID brackets IGUAL BRA_IZQ expression_list BRA_DER
    (57) declaration_list -> . ID
    (58) declaration_list -> . ID brackets
    (59) declaration_list -> . ID COR_IZQ COR_DER IGUAL CADENA
    (64) bracket -> . bracket COR_IZQ expression COR_DER
    (65) bracket -> . COR_IZQ expression COR_DER

    PUNTO           reduce using rule 60 (identifier -> ID .)
    IGUAL           reduce using rule 60 (identifier -> ID .)
    SUMA_IGUAL      reduce using rule 60 (identifier -> ID .)
    RESTA_IGUAL     reduce using rule 60 (identifier -> ID .)
    MULT_IGUAL      reduce using rule 60 (identifier -> ID .)
    DIV_IGUAL       reduce using rule 60 (identifier -> ID .)
    MOD_IGUAL       reduce using rule 60 (identifier -> ID .)
    SHIFT_IZQ_IGUAL reduce using rule 60 (identifier -> ID .)
    SHIFT_DER_IGUAL reduce using rule 60 (identifier -> ID .)
    AND_BIT_IGUAL   reduce using rule 60 (identifier -> ID .)
    XOR_BIT_IGUAL   reduce using rule 60 (identifier -> ID .)
    OR_BIT_IGUAL    reduce using rule 60 (identifier -> ID .)
    ID              shift and go to state 28
    COR_IZQ         shift and go to state 31

    declaration_list               shift and go to state 29
    bracket                        shift and go to state 30

state 16

    (66) assignation -> identifier . equals expression
    (67) assignation -> identifier . PUNTO ID equals expression
    (68) equals -> . IGUAL
    (69) equals -> . SUMA_IGUAL
    (70) equals -> . RESTA_IGUAL
    (71) equals -> . MULT_IGUAL
    (72) equals -> . DIV_IGUAL
    (73) equals -> . MOD_IGUAL
    (74) equals -> . SHIFT_IZQ_IGUAL
    (75) equals -> . SHIFT_DER_IGUAL
    (76) equals -> . AND_BIT_IGUAL
    (77) equals -> . XOR_BIT_IGUAL
    (78) equals -> . OR_BIT_IGUAL

    PUNTO           shift and go to state 33
    IGUAL           shift and go to state 34
    SUMA_IGUAL      shift and go to state 35
    RESTA_IGUAL     shift and go to state 36
    MULT_IGUAL      shift and go to state 37
    DIV_IGUAL       shift and go to state 38
    MOD_IGUAL       shift and go to state 39
    SHIFT_IZQ_IGUAL shift and go to state 40
    SHIFT_DER_IGUAL shift and go to state 41
    AND_BIT_IGUAL   shift and go to state 42
    XOR_BIT_IGUAL   shift and go to state 43
    OR_BIT_IGUAL    shift and go to state 44

    equals                         shift and go to state 32

state 17

    (4) program -> declars main .

    $end            reduce using rule 4 (program -> declars main .)


state 18

    (5) declars -> declars declar .

    INT             reduce using rule 5 (declars -> declars declar .)
    VOID            reduce using rule 5 (declars -> declars declar .)
    DOUBLE          reduce using rule 5 (declars -> declars declar .)
    CHAR            reduce using rule 5 (declars -> declars declar .)
    STRUCT          reduce using rule 5 (declars -> declars declar .)
    ID              reduce using rule 5 (declars -> declars declar .)


state 19

    (12) main -> INT MAIN . new_label PAR_IZQ PAR_DER function_block
    (13) new_label -> .

    PAR_IZQ         reduce using rule 13 (new_label -> .)

    new_label                      shift and go to state 45

state 20

    (7) declar -> primitive_type function .

    INT             reduce using rule 7 (declar -> primitive_type function .)
    VOID            reduce using rule 7 (declar -> primitive_type function .)
    DOUBLE          reduce using rule 7 (declar -> primitive_type function .)
    CHAR            reduce using rule 7 (declar -> primitive_type function .)
    STRUCT          reduce using rule 7 (declar -> primitive_type function .)
    ID              reduce using rule 7 (declar -> primitive_type function .)


state 21

    (48) declaration -> primitive_type declaration_list .
    (50) declaration_list -> declaration_list . COMA ID IGUAL expression
    (51) declaration_list -> declaration_list . COMA ID brackets IGUAL BRA_IZQ expression_list BRA_DER
    (52) declaration_list -> declaration_list . COMA ID
    (53) declaration_list -> declaration_list . COMA ID brackets
    (54) declaration_list -> declaration_list . COMA ID COR_IZQ COR_DER IGUAL CADENA

    PUNTO_COMA      reduce using rule 48 (declaration -> primitive_type declaration_list .)
    COMA            shift and go to state 46


state 22

    (14) function -> ID . new_label param add_function function_block
    (55) declaration_list -> ID . IGUAL expression
    (56) declaration_list -> ID . brackets IGUAL BRA_IZQ expression_list BRA_DER
    (57) declaration_list -> ID .
    (58) declaration_list -> ID . brackets
    (59) declaration_list -> ID . COR_IZQ COR_DER IGUAL CADENA
    (13) new_label -> .
    (62) brackets -> . bracket
    (63) brackets -> . COR_IZQ COR_DER
    (64) bracket -> . bracket COR_IZQ expression COR_DER
    (65) bracket -> . COR_IZQ expression COR_DER

    IGUAL           shift and go to state 48
    COMA            reduce using rule 57 (declaration_list -> ID .)
    PUNTO_COMA      reduce using rule 57 (declaration_list -> ID .)
    COR_IZQ         shift and go to state 50
    PAR_IZQ         reduce using rule 13 (new_label -> .)

    new_label                      shift and go to state 47
    brackets                       shift and go to state 49
    bracket                        shift and go to state 51

state 23

    (8) declar -> VOID function .

    INT             reduce using rule 8 (declar -> VOID function .)
    VOID            reduce using rule 8 (declar -> VOID function .)
    DOUBLE          reduce using rule 8 (declar -> VOID function .)
    CHAR            reduce using rule 8 (declar -> VOID function .)
    STRUCT          reduce using rule 8 (declar -> VOID function .)
    ID              reduce using rule 8 (declar -> VOID function .)


state 24

    (14) function -> ID . new_label param add_function function_block
    (13) new_label -> .

    PAR_IZQ         reduce using rule 13 (new_label -> .)

    new_label                      shift and go to state 47

state 25

    (9) declar -> declaration PUNTO_COMA .

    INT             reduce using rule 9 (declar -> declaration PUNTO_COMA .)
    VOID            reduce using rule 9 (declar -> declaration PUNTO_COMA .)
    DOUBLE          reduce using rule 9 (declar -> declaration PUNTO_COMA .)
    CHAR            reduce using rule 9 (declar -> declaration PUNTO_COMA .)
    STRUCT          reduce using rule 9 (declar -> declaration PUNTO_COMA .)
    ID              reduce using rule 9 (declar -> declaration PUNTO_COMA .)


state 26

    (10) declar -> assignation PUNTO_COMA .

    INT             reduce using rule 10 (declar -> assignation PUNTO_COMA .)
    VOID            reduce using rule 10 (declar -> assignation PUNTO_COMA .)
    DOUBLE          reduce using rule 10 (declar -> assignation PUNTO_COMA .)
    CHAR            reduce using rule 10 (declar -> assignation PUNTO_COMA .)
    STRUCT          reduce using rule 10 (declar -> assignation PUNTO_COMA .)
    ID              reduce using rule 10 (declar -> assignation PUNTO_COMA .)


state 27

    (24) primitive_type -> STRUCT ID .
    (25) struct -> STRUCT ID . struct_block PUNTO_COMA
    (26) struct_block -> . BRA_IZQ new_scope declarations BRA_DER

    ID              reduce using rule 24 (primitive_type -> STRUCT ID .)
    BRA_IZQ         shift and go to state 53

    struct_block                   shift and go to state 52

state 28

    (55) declaration_list -> ID . IGUAL expression
    (56) declaration_list -> ID . brackets IGUAL BRA_IZQ expression_list BRA_DER
    (57) declaration_list -> ID .
    (58) declaration_list -> ID . brackets
    (59) declaration_list -> ID . COR_IZQ COR_DER IGUAL CADENA
    (62) brackets -> . bracket
    (63) brackets -> . COR_IZQ COR_DER
    (64) bracket -> . bracket COR_IZQ expression COR_DER
    (65) bracket -> . COR_IZQ expression COR_DER

    IGUAL           shift and go to state 48
    COMA            reduce using rule 57 (declaration_list -> ID .)
    PUNTO_COMA      reduce using rule 57 (declaration_list -> ID .)
    COR_IZQ         shift and go to state 50

    brackets                       shift and go to state 49
    bracket                        shift and go to state 51

state 29

    (49) declaration -> ID declaration_list .
    (50) declaration_list -> declaration_list . COMA ID IGUAL expression
    (51) declaration_list -> declaration_list . COMA ID brackets IGUAL BRA_IZQ expression_list BRA_DER
    (52) declaration_list -> declaration_list . COMA ID
    (53) declaration_list -> declaration_list . COMA ID brackets
    (54) declaration_list -> declaration_list . COMA ID COR_IZQ COR_DER IGUAL CADENA

    PUNTO_COMA      reduce using rule 49 (declaration -> ID declaration_list .)
    COMA            shift and go to state 46


state 30

    (61) identifier -> ID bracket .
    (64) bracket -> bracket . COR_IZQ expression COR_DER

    PUNTO           reduce using rule 61 (identifier -> ID bracket .)
    IGUAL           reduce using rule 61 (identifier -> ID bracket .)
    SUMA_IGUAL      reduce using rule 61 (identifier -> ID bracket .)
    RESTA_IGUAL     reduce using rule 61 (identifier -> ID bracket .)
    MULT_IGUAL      reduce using rule 61 (identifier -> ID bracket .)
    DIV_IGUAL       reduce using rule 61 (identifier -> ID bracket .)
    MOD_IGUAL       reduce using rule 61 (identifier -> ID bracket .)
    SHIFT_IZQ_IGUAL reduce using rule 61 (identifier -> ID bracket .)
    SHIFT_DER_IGUAL reduce using rule 61 (identifier -> ID bracket .)
    AND_BIT_IGUAL   reduce using rule 61 (identifier -> ID bracket .)
    XOR_BIT_IGUAL   reduce using rule 61 (identifier -> ID bracket .)
    OR_BIT_IGUAL    reduce using rule 61 (identifier -> ID bracket .)
    COR_DER         reduce using rule 61 (identifier -> ID bracket .)
    SUMA            reduce using rule 61 (identifier -> ID bracket .)
    RESTA           reduce using rule 61 (identifier -> ID bracket .)
    MULT            reduce using rule 61 (identifier -> ID bracket .)
    DIV             reduce using rule 61 (identifier -> ID bracket .)
    MOD             reduce using rule 61 (identifier -> ID bracket .)
    AND             reduce using rule 61 (identifier -> ID bracket .)
    OR              reduce using rule 61 (identifier -> ID bracket .)
    ES_IGUAL        reduce using rule 61 (identifier -> ID bracket .)
    NO_IGUAL        reduce using rule 61 (identifier -> ID bracket .)
    MENOR_IGUAL     reduce using rule 61 (identifier -> ID bracket .)
    MAYOR_IGUAL     reduce using rule 61 (identifier -> ID bracket .)
    MENOR           reduce using rule 61 (identifier -> ID bracket .)
    MAYOR           reduce using rule 61 (identifier -> ID bracket .)
    AND_BIT         reduce using rule 61 (identifier -> ID bracket .)
    OR_BIT          reduce using rule 61 (identifier -> ID bracket .)
    XOR_BIT         reduce using rule 61 (identifier -> ID bracket .)
    SHIFT_IZQ       reduce using rule 61 (identifier -> ID bracket .)
    SHIFT_DER       reduce using rule 61 (identifier -> ID bracket .)
    INTERROGACION   reduce using rule 61 (identifier -> ID bracket .)
    SUMA_SUMA       reduce using rule 61 (identifier -> ID bracket .)
    RESTA_RESTA     reduce using rule 61 (identifier -> ID bracket .)
    PUNTO_COMA      reduce using rule 61 (identifier -> ID bracket .)
    PAR_DER         reduce using rule 61 (identifier -> ID bracket .)
    COMA            reduce using rule 61 (identifier -> ID bracket .)
    DOS_PUNTOS      reduce using rule 61 (identifier -> ID bracket .)
    BRA_DER         reduce using rule 61 (identifier -> ID bracket .)
    COR_IZQ         shift and go to state 54


state 31

    (65) bracket -> COR_IZQ . expression COR_DER
    (114) expression -> . expression SUMA expression
    (115) expression -> . expression RESTA expression
    (116) expression -> . expression MULT expression
    (117) expression -> . expression DIV expression
    (118) expression -> . expression MOD expression
    (119) expression -> . expression AND expression
    (120) expression -> . expression OR expression
    (121) expression -> . expression ES_IGUAL expression
    (122) expression -> . expression NO_IGUAL expression
    (123) expression -> . expression MENOR_IGUAL expression
    (124) expression -> . expression MAYOR_IGUAL expression
    (125) expression -> . expression MENOR expression
    (126) expression -> . expression MAYOR expression
    (127) expression -> . expression AND_BIT expression
    (128) expression -> . expression OR_BIT expression
    (129) expression -> . expression XOR_BIT expression
    (130) expression -> . expression SHIFT_IZQ expression
    (131) expression -> . expression SHIFT_DER expression
    (132) expression -> . RESTA expression
    (133) expression -> . AND_BIT expression
    (134) expression -> . NOT expression
    (135) expression -> . NOT_BIT expression
    (136) expression -> . PAR_IZQ expression PAR_DER
    (137) expression -> . expression INTERROGACION expression DOS_PUNTOS expression
    (138) expression -> . increase
    (139) expression -> . decrease
    (140) expression -> . ENTERO
    (141) expression -> . DECIMAL
    (142) expression -> . CARACTER
    (143) expression -> . CADENA
    (144) expression -> . function_call
    (145) expression -> . conversion
    (146) expression -> . identifier
    (147) expression -> . identifier PUNTO ID
    (151) increase -> . SUMA_SUMA expression
    (152) increase -> . expression SUMA_SUMA
    (153) decrease -> . RESTA_RESTA expression
    (154) decrease -> . expression RESTA_RESTA
    (109) function_call -> . ID param_val
    (148) conversion -> . PAR_IZQ INT PAR_DER expression
    (149) conversion -> . PAR_IZQ DOUBLE PAR_DER expression
    (150) conversion -> . PAR_IZQ CHAR PAR_DER expression
    (60) identifier -> . ID
    (61) identifier -> . ID bracket

    RESTA           shift and go to state 56
    AND_BIT         shift and go to state 57
    NOT             shift and go to state 58
    NOT_BIT         shift and go to state 59
    PAR_IZQ         shift and go to state 60
    ENTERO          shift and go to state 63
    DECIMAL         shift and go to state 64
    CARACTER        shift and go to state 65
    CADENA          shift and go to state 66
    SUMA_SUMA       shift and go to state 71
    RESTA_RESTA     shift and go to state 72
    ID              shift and go to state 70
